fix bullet item not showing up

--- a/app/globals.css
+++ b/app/globals.css
@@ -72,3 +72,13 @@ body {
 .ant-tabs .ant-tabs-tab-btn {
   color: rgba(0, 0, 0, 0.5);
 }
+
+ul {
+  list-style-type: none !important;
+}
+
+li {
+  display: list-item !important;
+  list-style-type: disc;
+  margin-left: 20px;
+}
